manifests/mgmt-sandbox/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-lb
  namespace: jenkins-shared
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  loadBalancerIP: 10.99.201.98
  ports:
    - name: mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
    release: "mongodb"
